--- a/File3.htm
+++ b/File3.htm
@@ -172,6 +172,66 @@
 }
 
 
+@media (max-width: 768px) {
+  .about-section {
+    padding: 15px 10px;
+  }
+
+  .about-section h2 {
+    font-size: 1.6rem;
+  }
+
+  .about-section p {
+    font-size: 0.95rem;
+  }
+
+  .team {
+    grid-template-columns: 1fr;
+    gap: 16px;
+  }
+
+  .member {
+    padding: 12px;
+  }
+
+  .member img {
+    width: 70px;
+    height: 70px;
+  }
+
+  .name {
+    font-size: 1rem;
+  }
+
+  .role {
+    font-size: 0.85rem;
+  }
+
+  .social-text {
+    font-size: 0.88rem;
+    padding: 12px;
+    width: 100%;
+    max-width: 100%;
+    box-shadow: none;
+    background: #f7fbfd;
+  }
+
+  .back-home {
+    font-size: 0.95rem;
+    padding: 10px 20px;
+    width: 80%;
+    display: block;
+    text-align: center;
+  }
+
+  footer {
+    font-size: 0.85rem;
+    margin-top: 20px;
+    padding: 8px;
+  }
+}
+
+
   </style>
 </head>
 <body>
