--- a/File4.htm
+++ b/File4.htm
@@ -210,6 +210,49 @@ h1 {
       margin: 50px 0;
       border-radius: 5px;
     }
+
+@media (max-width: 768px) {
+  .container {
+    margin: 30px auto;
+    padding: 0 15px;
+  }
+
+  h1 {
+    font-size: 2.2em;
+    margin-bottom: 30px;
+  }
+
+  .formula-card {
+    padding: 25px;
+    min-height: auto;
+  }
+
+  .chapter-title {
+    font-size: 1.3em;
+  }
+
+  .formula-placeholder {
+    font-size: 1em;
+    line-height: 1.6;
+  }
+
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  nav ul {
+    flex-direction: column;
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  nav ul li {
+    margin: 10px 0;
+  }
+}
+
+
   </style>
 </head>
 <body>
