--- a/index.htm
+++ b/index.htm
@@ -14,57 +14,52 @@
       font-family: 'Poppins', sans-serif;
     }
 
-    html {
-  overflow-y: scroll; 
-    }
-
     html, body {
       height: 100%;
       overflow-x: hidden;
+      scroll-behavior: smooth;
     }
 
     body {
-      background: linear-gradient(to right, #dbe6f6, #c5796d);
+      background: linear-gradient(to right, #e0f7fa, #ffffff);
       color: #333;
       display: flex;
       flex-direction: column;
-      opacity: 0;
-  transform: scale(0.95) rotateX(20deg);
-  animation: rotateFade 1.2s ease-out forwards;
-  transform-origin: top center;
-}
+    }
 
-@keyframes rotateFade {
-  0% {
-    opacity: 0;
-    transform: scale(0.95) rotateX(20deg);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1) rotateX(0);
-  }
-}
+    .animated-wrapper {
+      opacity: 0;
+      transform: translateY(40px);
+      animation: fadeInSlide 1s ease forwards;
+      position: relative;
+      will-change: transform, opacity;
+    }
+
+    @keyframes fadeInSlide {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
     nav {
-      background: #1e1e2f;
+      background: #ffffff00;
       padding: 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      color: white;
+      color: #005f73;
       position: sticky;
       top: 0;
       z-index: 999;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+      box-shadow: 0 1px 2px #43434314;
       font-family: 'Orbitron', sans-serif;
     }
 
     nav .logo {
-      font-size: 1.8em;
+      font-size: 1.6em;
       font-weight: bold;
-      color: #00e6e6;
-      text-shadow: 1px 1px 4px #000;
-      letter-spacing: 1px;
+      color: #0077b6;
     }
 
     nav ul {
@@ -74,16 +69,15 @@
     }
 
     nav ul li {
-      margin-left: 30px;
-      position: relative;
+      margin-left: 25px;
     }
 
     nav ul li a {
-      color: white;
+      color: #0077b6;
       text-decoration: none;
       font-weight: 600;
-      transition: all 0.3s ease;
       position: relative;
+      transition: color 0.3s ease;
     }
 
     nav ul li a::after {
@@ -93,7 +87,7 @@
       left: 0;
       width: 0%;
       height: 2px;
-      background-color: #00e6e6;
+      background-color: #00b4d8;
       transition: width 0.4s;
     }
 
@@ -102,130 +96,128 @@
     }
 
     nav ul li a:hover {
-      color: #00e6e6;
+      color: #00b4d8;
     }
 
     .main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      padding-top: 40px;
-    }
+       flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 120px; /* added this to avoid overlap with button */
+}
+
+
 
     .intro {
       width: 100%;
       max-width: 1200px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
       text-align: center;
-      color: #fff;
       padding: 40px 20px;
-      border-radius: 20px;
       position: relative;
     }
 
     .intro h1 {
-      font-size: 3.5em;
+      font-size: 3.6em;
       margin-bottom: 20px;
-      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+      color: #136db6;
+      text-shadow: 0 6px 8px #8cb0b6a2, 0 0 20px #ccd6f39a;
     }
 
     .intro p {
       font-size: 1.3em;
       max-width: 800px;
-      margin-bottom: 40px;
-      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+      margin: auto;
+      color: #003344;
     }
 
-    .intro .dropdown {
-      margin-bottom: 30px;
+    .dropdown {
+      position: fixed;
+      bottom: 0.01px;
+      right: 30px;
+      z-index: 1000;
     }
 
     .dropdown-btn {
-      background-color: #8de0e021  !important;
-  color: #122222;
-  padding: 5px 15px;
-  border: 4px double black !important;
-  right: 300px;
-  border-radius: 12px;
-  cursor: pointer;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  transition: all 0.3s ease;
-  position: relative;
-  box-shadow: none !important;
-}
+      background: linear-gradient(to right, #00b4d8, #0077b6);
+      color: #fff;
+      padding: 10px 20px;
+      font-weight: bold;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      font-size: 1em;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      transition: 0.3s;
+    }
 
-   .arrow {
-  display: inline-block;
-  transition: transform 0.4s ease;
-}
+    .dropdown-btn:hover {
+      box-shadow: 0 8px 16px rgba(0, 136, 255, 0.3);
+      transform: scale(1.03);
+    }
+
+    .arrow {
+      transition: transform 0.4s ease;
+    }
+
+    .dropdown:hover .arrow {
+      transform: rotate(180deg);
+    }
 
     .note-dropdown {
       position: absolute;
-      top: 100%;
-      left: 0;
-      background-color: #ebebeb;
-      border-radius: 8px;
-      padding: 8px 6px 8px 6px;
-      overflow: hidden;
-      color:#00183a;
-       text-shadow: 1px 1px 2px #4f4f4f80;
-      box-shadow: 0 6px 12px #00000033;
-      max-width: 820px;
+      bottom: 110%;
+      right: 0;
+      background-color: #f0faff;
+      color: #003344;
+      border-radius: 10px;
+      padding: 14px 18px;
+      width: 400px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.15);
       opacity: 0;
-      transform: translateY(-10px);
       pointer-events: none;
       transition: all 0.4s ease;
+      font-size: 0.95em;
+      text-align: left;
+      z-index: 100;
+      transform: translateY(10px);
     }
 
     .dropdown:hover .note-dropdown {
       opacity: 1;
-      transform: translateY(0);
       pointer-events: auto;
+      transform: translateY(-10px);
     }
-
-    .dropdown:hover .dropdown-btn {
-  background-color: #8dc6e021 !important;
-}
-
-.dropdown:hover .dropdown-btn .arrow {
-  transform: rotate(180deg);
-}
 
     .intro-btn {
       padding: 15px 30px;
       font-size: 1.1em;
-      background: #00e6e6;
-      color: #1e1e2f;
+      background: linear-gradient(to right, #00b4d8, #0077b6);
+      color: #fff;
       border: none;
       border-radius: 10px;
       font-weight: bold;
+      margin: 5% 0 0 0;
       cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.3);
+      transition: 0.3s;
     }
 
-    .intro button:hover {
+    .intro-btn:hover {
       transform: scale(1.05);
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
     }
 
-    .intro .math-img {
+    .math-img {
+      position: absolute;
       right: 30px;
-     position: absolute;
-      bottom: 20px;
-      opacity: 0.4;
-      width: 240px;
-      height: 200px;
-
-      animation: floaty 6s ease-in-out infinite;
+      opacity: 0.06;
+      width: 300px;
+      height: auto;
     }
 
     @keyframes floaty {
@@ -235,141 +227,153 @@
 
     footer {
       text-align: center;
-      background: #1e1e2f;
-      color: #00e6e6;
-      letter-spacing: 1px;
+      background: linear-gradient(to right, #c2f0ff, #d0f5ff);
+      color: #0077b6;
       font-family: 'Orbitron', sans-serif;
-      box-shadow: 0 -4px 6px rgba(0,0,0,0.2);
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      footer {
-      padding: 10px;
+      padding: 12px;
       font-size: 1em;
-}
+      box-shadow: 0 -4px 6px rgba(0,0,0,0.08);
+      margin-top: 162px;
+      border-top: 2px solid #00b4d8;
     }
 
     @media (max-width: 768px) {
+      .intro h1 {
+        font-size: 2.2em;
+      }
+
+      .dropdown {
+        margin-left: 0;
+      }
+
+      .note-dropdown {
+        width: 90vw;
+        font-size: 0.9em;
+      }
+
+      .math-img {
+        width: 120px;
+        right: 10px;
+      }
+
+      .intro-btn {
+        width: 80%;
+      }
+
+      nav {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav .logo {
+        font-size: 1.4em;
+        margin-bottom: 10px;
+      }
+
       nav ul {
         flex-direction: column;
-        align-items: center;
+        width: 100%;
       }
+
       nav ul li {
         margin: 10px 0;
       }
-      .intro h1 {
-        font-size: 2.5em;
-      }
-      .intro p {
-        font-size: 1em;
-      }
-      .intro .math-img {
-        right: 10px;
-        bottom: 10px;
-        width: 100px;
+
+      footer {
+        font-size: 0.9em;
       }
     }
 
-    @media (max-width: 768px) {
-  nav {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+    @media (max-width: 480px) {
+      .intro h1 {
+        font-size: 1.8em;
+      }
 
-  nav .logo {
-    font-size: 1.4em;
-    margin-bottom: 10px;
-  }
+      .intro p {
+        font-size: 1em;
+      }
 
-  nav ul {
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-  }
+      .dropdown-btn {
+        padding: 8px 12px;
+        font-size: 0.9em;
+      }
 
-  nav ul li {
-    margin: 8px 0;
-  }
+      .note-dropdown {
+        right: auto;
+        left: 0;
+        width: 90vw;
+        font-size: 0.85em;
+      }
 
-  .intro h1 {
-    font-size: 2em;
-  }
+      .intro-btn {
+        width: 100%;
+        font-size: 1em;
+      }
 
-  .intro p {
-    font-size: 1em;
-    padding: 0 10px;
-  }
+      .man-img {
+        height: 180px;
+        top: 50%;
+        left: 10%;
+      }
 
-  .dropdown {
-    width: 90%;
-    margin-left: 0;
-    align-self: center !important;
-  }
+      .math-img {
+        display: none;
+      }
+    }
 
-  .note-dropdown {
-    max-width: 100%;
-    width: 100%;
-    font-size: 0.9em;
-    z-index: 100;
-  }
-
-  .intro .math-img {
-    width: 120px;
-    height: auto;
-    right: 10px;
-    bottom: 10px;
-    opacity: 0.3;
-  }
-
-  .intro-btn {
-    width: 80%;
-    font-size: 1em;
-    padding: 12px 20px;
-  }
-
-  footer {
-    font-size: 0.9em;
-    padding: 8px;
-  }
-}
-
-
+    .man-img {
+      height: 350px;
+      width: auto;
+      opacity: 0.05;
+      position: absolute;
+      margin: 0 0 auto 20px;
+      left: 14%;
+      top: 40%;
+      animation: floaty 2s ease-in-out infinite;
+    }
   </style>
 </head>
 <body>
-  <a name="Home"></a>
-  <nav>
-    <div class="logo">📘 Class 11 Maths</div>
-    <ul>
-      <li><a href="#Home">Home</a></li>
-      <li><a href="File4.htm">Formulas</a></li>
-      <li><a href="File3.htm">About</a></li>
-    </ul>
-  </nav>
 
-  <main class="main">
-    <section class="intro">
-      <h1>Welcome to Class 11 Mathematics Page</h1>
-      <p>All NCERT chapters with detailed notes, chapter summaries, and a smart design you'll love. Start your math journey now!</p>
+  <div class="animated-wrapper">
 
-      <!-- Dropdown Button -->
-      <div class="dropdown" style="margin-bottom: 30px; align-self: flex-start; margin-left: 25%;">
-        <button class="dropdown-btn">📘 A Note for Reader <span class="arrow">▼</span></button>
-        <div class="note-dropdown">
-          Hello viewers . Welcome toDevelopers. This is an academic webpage which includes all the important contents required for cracking Class 11 Mathematics [CBSE].In this webpage you will get all the keypoints, important terms and specially the summarythe whole outcome of the chapter.In short this webpage will help you to understand and revise all the chapters and their keypoints at a glance. So start your study with your excitement. Good wishes from Developers.
-        </div>
-      </div>
+    <nav>
+      <div class="logo">📘 Class 11 Maths</div>
+      <ul>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="File4.htm">Formulas</a></li>
+        <li><a href="File3.htm">About</a></li>
+      </ul>
+    </nav>
 
-       <img class="math-img" src="math-tools.png" alt="">
+    <main class="main">
+      <section class="intro">
+        <h1>Welcome to Class 11 Mathematics Page</h1>
+        <p>All NCERT chapters with detailed notes, summaries, and a smart design you’ll love. Start your math journey now!</p>
 
-      <!-- Let's Go Button -->
-      <button class="intro-btn"onclick="window.location.href='File2.htm'">🚀 Let’s Go!</button>
+        <button class="intro-btn" onclick="window.location.href='File2.htm'">🚀 Get Started</button>
+        <img class="math-img" src="math-tools.png" alt="Math Illustration">
+      </section>
+    </main>
+
+    <img src="man.png" class="man-img" alt="man-pointing">
+  </div>
     
-    </section>
-  </main>
+  <!-- Fixed Note Button -->
+  <div class="dropdown">
+    <button class="dropdown-btn">📘 A Note for Reader <span class="arrow">▼</span></button>
+    <div class="note-dropdown">
+      Hello viewers, welcome to Developers. This is an academic webpage which includes all the important content required for cracking Class 11 Mathematics [CBSE]. In this webpage, you will get key points, important terms, and specially the summary — the whole outcome of the chapter. In short, this webpage will help you revise everything at a glance. Happy learning!
+    </div>
+  </div>
 
+  <!-- Footer at bottom -->
   <footer>
     BY: DEVELOPERS 💻 | Made with ❤️ for Class 11 Aspirants
   </footer>
+</body>
+</html>
+
+
 </body>
 </html>
