--- a/File4.htm
+++ b/File4.htm
@@ -35,8 +35,8 @@
       }
     }
 
-  nav {
-      background: #333333cf;
+    nav {
+      background: linear-gradient(to right, #c2f0ff, #d0f5ff);
       padding: 20px;
       display: flex;
       justify-content: space-between;
@@ -44,7 +44,7 @@
       color: #005f73;
       position: sticky;
       top: 0;
-      z-index: 999;
+      z-index: 10;
       box-shadow: 0 4px 6px rgba(0,0,0,0.08);
       font-family: 'Orbitron', sans-serif;
     }
@@ -52,7 +52,7 @@
     nav .logo {
       font-size: 1.6em;
       font-weight: bold;
-      color: #00d5ff;
+      color: #0077b6;
     }
 
     nav ul {
@@ -66,7 +66,7 @@
     }
 
     nav ul li a {
-      color: #00d5ff;
+      color: #0077b6;
       text-decoration: none;
       font-weight: 600;
       position: relative;
@@ -89,7 +89,7 @@
     }
 
     nav ul li a:hover {
-      color: #0cd5f4;
+      color: #00b4d8;
     }
 
     .container {
@@ -271,14 +271,6 @@ h1 {
     <div class="formula-card">
       <div class="chapter-title" data-icon="📚">Chapter 1: Sets</div>
       <div class="formula-placeholder">[Your formulas here]</div>
-    </div>
-    <div class="divider"></div>
-
-
-
- <div class="formula-card">
-      <div class="chapter-title" data-icon="📚{}">Chapter 1: Sets</div>
-      <div class="formula-placeholder">Add formulas for Sets here...</div>
     </div>
     <div class="divider"></div>
 
