--- a/Mathematics.htm
+++ b/Mathematics.htm
@@ -1,62 +1,386 @@
-@media (max-width: 768px) {
-  nav {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Class 11 Maths Notes</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Poppins:wght@400;600&display=swap');
 
-  nav .logo {
-    font-size: 1.4em;
-    margin-bottom: 10px;
-  }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
 
-  nav ul {
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-  }
+    html, body {
+      height: 100%;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
+    }
 
-  nav ul li {
-    margin: 8px 0;
-  }
+    body {
+      background: linear-gradient(to right, #e0f7fa, #ffffff);
+      color: #333;
+      display: flex;
+      flex-direction: column;
+    }
 
-  .intro h1 {
-    font-size: 2em;
-  }
+    .animated-wrapper {
+      opacity: 0;
+      transform: translateY(40px);
+      animation: fadeInSlide 1s ease forwards;
+      position: relative;
+      will-change: transform, opacity;
+    }
 
-  .intro p {
-    font-size: 1em;
-    padding: 0 10px;
-  }
+    @keyframes fadeInSlide {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
-  .dropdown {
-    width: 90%;
-    margin-left: 0;
-    align-self: center !important;
-  }
+    nav {
+      background: #ffffff00;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #005f73;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      box-shadow: 0 1px 2px #43434314;
+      font-family: 'Orbitron', sans-serif;
+    }
 
-  .note-dropdown {
-    max-width: 100%;
-    width: 100%;
-    font-size: 0.9em;
-    z-index: 100;
-  }
+    nav .logo {
+      font-size: 1.6em;
+      font-weight: bold;
+      color: #0077b6;
+    }
 
-  .intro .math-img {
-    width: 120px;
-    height: auto;
-    right: 10px;
-    bottom: 10px;
-    opacity: 0.3;
-  }
+    nav ul {
+      display: flex;
+      list-style: none;
+      align-items: center;
+    }
 
-  .intro-btn {
-    width: 80%;
-    font-size: 1em;
-    padding: 12px 20px;
-  }
+    nav ul li {
+      margin-left: 25px;
+    }
 
-  footer {
-    font-size: 0.9em;
-    padding: 8px;
-  }
-}
+    nav ul li a {
+      color: #0077b6;
+      text-decoration: none;
+      font-weight: 600;
+      position: relative;
+      transition: color 0.3s ease;
+    }
+
+    nav ul li a::after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 0%;
+      height: 2px;
+      background-color: #00b4d8;
+      transition: width 0.4s;
+    }
+
+    nav ul li a:hover::after {
+      width: 100%;
+    }
+
+    nav ul li a:hover {
+      color: #00b4d8;
+    }
+
+    .main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      padding-top: 40px;
+      padding-bottom: 120px;
+    }
+
+    .intro {
+      width: 100%;
+      max-width: 1200px;
+      text-align: center;
+      padding: 40px 20px;
+      position: relative;
+    }
+
+    .intro h1 {
+      font-size: 3.6em;
+      margin-bottom: 20px;
+      color: #136db6;
+      text-shadow: 0 6px 8px #8cb0b6a2, 0 0 20px #ccd6f39a;
+    }
+
+    .intro p {
+      font-size: 1.3em;
+      max-width: 800px;
+      margin: auto;
+      color: #003344;
+    }
+
+    .dropdown {
+      position: fixed;
+      bottom: 0.01px;
+      right: 30px;
+      z-index: 1000;
+    }
+
+    .dropdown-btn {
+      background: linear-gradient(to right, #00b4d8, #0077b6);
+      color: #fff;
+      padding: 10px 20px;
+      font-weight: bold;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      font-size: 1em;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      transition: 0.3s;
+    }
+
+    .dropdown-btn:hover {
+      box-shadow: 0 8px 16px rgba(0, 136, 255, 0.3);
+      transform: scale(1.03);
+    }
+
+    .arrow {
+      transition: transform 0.4s ease;
+    }
+
+    .dropdown:hover .arrow {
+      transform: rotate(180deg);
+    }
+
+    .note-dropdown {
+      position: absolute;
+      bottom: 110%;
+      right: 0;
+      background-color: #f0faff;
+      color: #003344;
+      border-radius: 10px;
+      padding: 14px 18px;
+      width: 400px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+      opacity: 0;
+      pointer-events: none;
+      transition: all 0.4s ease;
+      font-size: 0.95em;
+      text-align: left;
+      z-index: 100;
+      transform: translateY(10px);
+    }
+
+    .dropdown:hover .note-dropdown {
+      opacity: 1;
+      pointer-events: auto;
+      transform: translateY(-10px);
+    }
+
+    .intro-btn {
+      padding: 15px 30px;
+      font-size: 1.1em;
+      background: linear-gradient(to right, #00b4d8, #0077b6);
+      color: #fff;
+      border: none;
+      border-radius: 10px;
+      font-weight: bold;
+      margin: 5% 0 0 0;
+      cursor: pointer;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.3);
+      transition: 0.3s;
+    }
+
+    .intro-btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
+    }
+
+    .math-img {
+      position: absolute;
+      right: 30px;
+      opacity: 0.06;
+      width: 300px;
+      height: auto;
+    }
+
+    @keyframes floaty {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+
+    .man-img {
+      height: 350px;
+      width: auto;
+      opacity: 0.05;
+      position: absolute;
+      margin: 0 0 auto 20px;
+      left: 12%;
+      top: 48%;
+      animation: floaty 4s ease-in-out infinite;
+    }
+
+    footer {
+      text-align: center;
+      background: linear-gradient(to right, #c2f0ff, #d0f5ff);
+      color: #0077b6;
+      font-family: 'Orbitron', sans-serif;
+      padding: 12px;
+      font-size: 1em;
+      box-shadow: 0 -4px 6px rgba(0,0,0,0.08);
+      margin-top: 162px;
+      border-top: 2px solid #00b4d8;
+    }
+
+    /* ========== Responsive ========== */
+    @media (max-width: 1024px) {
+      .intro h1 {
+        font-size: 2.8em;
+      }
+      .math-img {
+        width: 180px;
+        right: 10px;
+      }
+      .man-img {
+        height: 250px;
+        left: 5%;
+      }
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav .logo {
+        margin-bottom: 10px;
+        font-size: 1.4em;
+      }
+
+      nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+      }
+
+      nav ul li {
+        margin: 10px 0;
+      }
+
+      .intro h1 {
+        font-size: 2.2em;
+      }
+
+      .intro p {
+        font-size: 1.1em;
+      }
+
+      .intro-btn {
+        width: 90%;
+        font-size: 1em;
+      }
+
+      .note-dropdown {
+        width: 90vw;
+        font-size: 0.9em;
+      }
+
+      .math-img {
+        width: 120px;
+      }
+
+      .man-img {
+        height: 180px;
+        left: 8%;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .intro h1 {
+        font-size: 1.8em;
+      }
+
+      .intro p {
+        font-size: 1em;
+      }
+
+      .dropdown-btn {
+        padding: 10px 12px;
+        font-size: 0.9em;
+      }
+
+      .note-dropdown {
+        width: 95vw;
+        font-size: 0.85em;
+        left: 0;
+        right: auto;
+      }
+
+      .intro-btn {
+        width: 100%;
+        font-size: 1em;
+      }
+
+      .math-img, .man-img {
+        display: none;
+      }
+
+      footer {
+        font-size: 0.85em;
+        text-align: center;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="animated-wrapper">
+
+    <nav>
+      <div class="logo">📘 Class 11 Maths</div>
+      <ul>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="File4.htm">Formulas</a></li>
+        <li><a href="File3.htm">About</a></li>
+      </ul>
+    </nav>
+
+    <main class="main">
+      <section class="intro">
+        <h1>Welcome to Class 11 Mathematics Page</h1>
+        <p>All NCERT chapters with detailed notes, summaries, and a smart design you’ll love. Start your math journey now!</p>
+
+        <button class="intro-btn" onclick="window.location.href='File2.htm'">🚀 Get Started</button>
+        <img class="math-img" src="math-tools.png" alt="Math Illustration">
+      </section>
+    </main>
+
+    <img src="man.png" class="man-img" alt="man-pointing">
+  </div>
+
+  <footer>
+    BY: DEVELOPERS 💻 | Made with ❤️ for Class 11 Aspirants
+    <div class="dropdown">
+      <button class="dropdown-btn">📘 A Note for Reader <span class="arrow">▼</span></button>
+      <div class="note-dropdown">
+        Hello viewers, welcome to Developers. This is an academic webpage which includes all the important content required for cracking Class 11 Mathematics [CBSE]. In this webpage, you will get key points, important terms, and specially the summary — the whole outcome of the chapter. In short, this webpage will help you revise everything at a glance. Happy learning!
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
