--- a/File2.htm
+++ b/File2.htm
@@ -385,7 +385,34 @@
     <div class="faq-question">Q3. How to answer complex questions using the CBSE Class 11 Maths Notes?</div>
     <div class="faq-answer">The CBSE Class 11 Maths Notes is curated to provide students with a good knowledge of important topics. It increases the problem-solving skills among students, which is vital from the exam point of view.</div>
   </div>
+
+<div class="faq-box">
+    <div class="faq-question">Q4. How are these notes better than others?</div>
+    <div class="faq-answer">Our notes are written in simple language, with a concept-first approach, clean design, and hand-drawn diagrams for better understanding. They're crafted to make learning math easy, smart, and enjoyable.</div>
+  </div>
+
+<div class="faq-box">
+    <div class="faq-question">Q5. Are all chapters of Class 11 covered?</div>
+    <div class="faq-answer">Yes, all 14 chapters of Class 11 Maths are covered—from Sets to Probability, with updates as per the revised CBSE curriculum.</div>
+  </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
