--- a/index.htm
+++ b/index.htm
@@ -226,15 +226,11 @@
     }
 
     footer {
+       margin: 20px 0 10px;
+      font-size: 0.9rem;
+      color: #888;
+     opacity:0.5;
       text-align: center;
-      background: linear-gradient(to right, #c2f0ff, #d0f5ff);
-      color: #0077b6;
-      font-family: 'Orbitron', sans-serif;
-      padding: 12px;
-      font-size: 1em;
-      box-shadow: 0 -4px 6px rgba(0,0,0,0.08);
-      margin-top: 162px;
-      border-top: 2px solid #00b4d8;
     }
 
     @media (max-width: 768px) {
@@ -363,14 +359,21 @@
   
 
   <!-- Footer at bottom -->
-  <footer>
-    BY: DEVELOPERS 💻 | Made with ❤️ for Class 11 Aspirants
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
     <div class="dropdown">
     <button class="dropdown-btn">📘 A Note for Reader <span class="arrow">▼</span></button>
     <div class="note-dropdown">
       Hello viewers, welcome to Developers. This is an academic webpage which includes all the important content required for cracking Class 11 Mathematics [CBSE]. In this webpage, you will get key points, important terms, and specially the summary — the whole outcome of the chapter. In short, this webpage will help you revise everything at a glance. Happy learning!
     </div>
   </div>
+   <br>
+   <br>
+  <footer>
+    BY: DEVELOPERS 💻 | Made with ❤️ for Class 11 Aspirant
   </footer>
 </body>
 </html>
