--- a/Mathematics.htm
+++ b/Mathematics.htm
@@ -100,14 +100,16 @@
     }
 
     .main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      padding-top: 40px;
-      padding-bottom: 120px;
-    }
+       flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 120px; /* added this to avoid overlap with button */
+}
+
+
 
     .intro {
       width: 100%;
@@ -223,76 +225,21 @@
       50% { transform: translateY(-10px); }
     }
 
-    .man-img {
-      height: 350px;
-      width: auto;
-      opacity: 0.05;
-      position: absolute;
-      margin: 0 0 auto 20px;
-      left: 12%;
-      top: 48%;
-      animation: floaty 4s ease-in-out infinite;
-    }
-
     footer {
+       margin: 20px 0 10px;
+      font-size: 0.9rem;
+      color: #888;
+     opacity:0.5;
       text-align: center;
-      background: linear-gradient(to right, #c2f0ff, #d0f5ff);
-      color: #0077b6;
-      font-family: 'Orbitron', sans-serif;
-      padding: 12px;
-      font-size: 1em;
-      box-shadow: 0 -4px 6px rgba(0,0,0,0.08);
-      margin-top: 162px;
-      border-top: 2px solid #00b4d8;
-    }
-
-    /* ========== Responsive ========== */
-    @media (max-width: 1024px) {
-      .intro h1 {
-        font-size: 2.8em;
-      }
-      .math-img {
-        width: 180px;
-        right: 10px;
-      }
-      .man-img {
-        height: 250px;
-        left: 5%;
-      }
     }
 
     @media (max-width: 768px) {
-      nav {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav .logo {
-        margin-bottom: 10px;
-        font-size: 1.4em;
-      }
-
-      nav ul {
-        flex-direction: column;
-        align-items: flex-start;
-        width: 100%;
-      }
-
-      nav ul li {
-        margin: 10px 0;
-      }
-
       .intro h1 {
         font-size: 2.2em;
       }
 
-      .intro p {
-        font-size: 1.1em;
-      }
-
-      .intro-btn {
-        width: 90%;
-        font-size: 1em;
+      .dropdown {
+        margin-left: 0;
       }
 
       .note-dropdown {
@@ -302,11 +249,34 @@
 
       .math-img {
         width: 120px;
+        right: 10px;
       }
 
-      .man-img {
-        height: 180px;
-        left: 8%;
+      .intro-btn {
+        width: 80%;
+      }
+
+      nav {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav .logo {
+        font-size: 1.4em;
+        margin-bottom: 10px;
+      }
+
+      nav ul {
+        flex-direction: column;
+        width: 100%;
+      }
+
+      nav ul li {
+        margin: 10px 0;
+      }
+
+      footer {
+        font-size: 0.9em;
       }
     }
 
@@ -320,15 +290,15 @@
       }
 
       .dropdown-btn {
-        padding: 10px 12px;
+        padding: 8px 12px;
         font-size: 0.9em;
       }
 
       .note-dropdown {
-        width: 95vw;
-        font-size: 0.85em;
-        left: 0;
         right: auto;
+        left: 0;
+        width: 90vw;
+        font-size: 0.85em;
       }
 
       .intro-btn {
@@ -336,14 +306,30 @@
         font-size: 1em;
       }
 
-      .math-img, .man-img {
-        display: none;
+      .man-img {
+        height: 180px;
+        top: 50%;
+        left: 10%;
       }
 
-      footer {
-        font-size: 0.85em;
-        text-align: center;
+      .math-img {
+        display: none;
       }
+    }
+
+    .man-img {
+      height: 350px;
+      width: auto;
+      opacity: 0.05;
+      position: absolute;
+      margin: 0 0 auto 20px;
+      left: 12%;
+      top: 48%;
+      animation: floaty 4s ease-in-out infinite;
+    }
+    .im{
+      height:50px;
+      width:auto;
     }
   </style>
 </head>
@@ -353,6 +339,7 @@
 
     <nav>
       <div class="logo">📘 Class 11 Maths</div>
+      <img src="dvlogo.png" alt="......................" class="im">
       <ul>
         <li><a href="#Home">Home</a></li>
         <li><a href="File4.htm">Formulas</a></li>
@@ -372,15 +359,30 @@
 
     <img src="man.png" class="man-img" alt="man-pointing">
   </div>
+    
+  <!-- Fixed Note Button -->
+  
 
-  <footer>
-    BY: DEVELOPERS 💻 | Made with ❤️ for Class 11 Aspirants
+  <!-- Footer at bottom -->
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
     <div class="dropdown">
-      <button class="dropdown-btn">📘 A Note for Reader <span class="arrow">▼</span></button>
-      <div class="note-dropdown">
-        Hello viewers, welcome to Developers. This is an academic webpage which includes all the important content required for cracking Class 11 Mathematics [CBSE]. In this webpage, you will get key points, important terms, and specially the summary — the whole outcome of the chapter. In short, this webpage will help you revise everything at a glance. Happy learning!
-      </div>
+    <button class="dropdown-btn">📘 A Note for Reader <span class="arrow">▼</span></button>
+    <div class="note-dropdown">
+      Hello viewers, welcome to Developers. This is an academic webpage which includes all the important content required for cracking Class 11 Mathematics [CBSE]. In this webpage, you will get key points, important terms, and specially the summary — the whole outcome of the chapter. In short, this webpage will help you revise everything at a glance. Happy learning!
     </div>
+  </div>
+   <br>
+   <br>
+  <footer>
+    BY: DEVELOPERS 💻 | Made with ❤️ for Class 11 Aspirant
   </footer>
+</body>
+</html>
+
+
 </body>
 </html>
