--- a/File2.htm
+++ b/File2.htm
@@ -6,6 +6,10 @@
   <title>Class 11 Maths | Chapters</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Poppins:wght@400;600&display=swap');
+
     * {
       margin: 0;
       padding: 0;
