--- a/File2.htm
+++ b/File2.htm
@@ -146,7 +146,7 @@
       cursor: pointer;
       width: 100%;
       text-align: left;
-      transition: 0.3s;
+      transition: 0.8s;
       box-shadow: 0 8px 25px rgba(0, 183, 255, 0.3);
       position: relative;
       overflow-x: hidden;
@@ -155,6 +155,11 @@
       scroll-margin: 0px;
       -webkit-tap-highlight-color: transparent;
     }
+
+.dropdown-button:hover{
+transform: scale(1.02);
+box-shadow: 0 6px 8px #00000037;
+}
 
     .dropdown-button:focus {
       outline: none;
@@ -287,11 +292,11 @@
   max-width: 900px;
   margin: 0 auto;
   padding: 30px 40px;
-  background: rgba(255, 255, 255, 0.3);
+  background: #ffffff4d;
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
   border-radius: 25px;
-  box-shadow: 0 12px 40px rgba(0, 119, 182, 0.1);
+  box-shadow: 0 12px 40px #0077b61a;
   color: #005f73;
   font-family: 'Poppins', sans-serif;
   margin-top: 260px;
@@ -331,6 +336,64 @@
   font-size: 1em;
   line-height: 1.6;
   color: #023e58;
+}
+
+.other-links{
+  background-color: #f2fdff;
+  border-radius: 10px;
+  position: relative;
+  box-shadow: 0 12px 40px #0143671a;
+  text-align: center;
+  justify-content: center;
+  max-width: 300px;
+  padding: 8px 0;
+  margin: 30px auto;
+  transition: transform  0.3s ease;
+}
+
+.other-links:hover{
+  transform: translateY(-4px);
+}
+
+  .other-links a {
+      position: relative;
+      display: inline-block;
+      padding: 0 0 4px 0;
+      color: #1a86be;
+      font-weight: bolder;
+      text-decoration: none;
+      transition: color 0.3s ease, transform 0.3s ease;
+    }
+
+    .other-links a::after {
+      content: '';
+      position: absolute;
+      width: 0%;
+      height: 1px;
+      left: 0;
+      bottom: -1px;
+      background-color: #209ddc;
+      transition: width 0.4s ease;
+    }
+
+    .other-links a:hover {
+      color: #209ddc; /* rose-500 */
+      transform: translateY(-3px); /* soft upward lift */
+    }
+
+    .other-links a:hover::after {
+      width: 100%;
+    }
+
+.other-links .h{
+  color: #002e46be;
+  text-shadow: 1px 2px 4px #33333346;
+
+}
+
+.other-links span{
+  color: #4f4e4e43;
+
 }
   </style>
 </head>
@@ -401,8 +464,18 @@
   </div>
 </div>
 
-
-
+<div class="other-links">
+  <h2 class="h">YOU MIGHT ALSO LIKE</h2>
+  <hr style="color: #023e58; height: 2px; margin: auto;" width="200px" noshade >
+  <br>
+  <a href="Landingpage.html">&gt Ayodhya Ram Mandir</a>
+  <br>
+  <a href="AI.html">&gt Artificial Intelligence (AI)</a>
+  <br>
+  <a href="#">&gt Indian Festivals</a>
+  <br>
+  <span>Credit:- Harshit</span>
+</div>
 
 
 
